# agent-skills

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.changes/: 0.2.0.md  0.2.1.md  0.2.2.md
.changes/unreleased/: Added-20260404-183054.yaml  Added-20260406-jules-dispatches.yaml  Added-20260407-120927.yaml  Added-20260407-135734.yaml  Added-20260407-pi-rpc-timeout-spec.yaml  Added-20260408-lychee-link-check.yaml  Changed-20260407-140935.yaml  Fixed-20260404-183753.yaml  Fixed-20260408-dispatch-token-scope.yaml  Fixed-20260408-release-retrigger.yaml  Fixed-20260408-release-tag-drift.yaml
.github/workflows/: jules-review-dispatch.yml  jules-security-dispatch.yml  jules-skills-dispatch.yml  link-check.yml  release.yml
docs/: skills.md
skills/ansible/: SKILL.md
skills/canvas-design/: SKILL.md
skills/cc-agent-teams/: SKILL.md
skills/cc-hooks/: SKILL.md
skills/changie/: SKILL.md
skills/charm-tui/: SKILL.md
skills/csv/: SKILL.md
skills/dispatch/: SKILL.md
skills/document-release/: SKILL.md
skills/docx/: SKILL.md
skills/gemini-cli/: SKILL.md
skills/go-gh/: SKILL.md
skills/go-naming/: SKILL.md
skills/go-secure/: SKILL.md
skills/husky/: SKILL.md
skills/jules/: SKILL.md
skills/jules-dispatch-creator/: SKILL.md
skills/lefthook/: SKILL.md
skills/lychee/: SKILL.md  lychee.toml
skills/opencode/: SKILL.md
skills/pdf/: SKILL.md
skills/pi-rpc/: SKILL.md
skills/quarto-alt-text/: SKILL.md
skills/r-expert/: SKILL.md
spec/: 21-60s-inactivity-timeout.md  22-pi-rpc-provider-mismatch.md
(+53 files in other folders)
